website/websites/gp4/code/recursive-scala.log
BUILD COMMANDS FOR: recursive.scala

Thu Jan 25 14:06:48 PST 2007

( if [ ! -d recursive.scala_run ] ; then mkdir recursive.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/recursive/recursive.scala recursive.scala_run/recursive.scala
( cd recursive.scala_run ; /opt/scala-2.3.2/bin/scalac recursive.scala )
recursive.scala:30: error: value printf is not a member of object scala.Console
    Console.printf("Fib({0,number,.#}): {1,number,.#}\n")((27.0+n), fib(27.0+n))
           ^
one error found
make[3]: [recursive.scala_run] Error 1 (ignored)
touch recursive.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java -Xss32m -server" /opt/scala-2.3.2/bin/scala -classpath recursive.scala_run recursive %A
************************************************************
*   TEST (recursive.scala_run) FAILED - ERROR:  recursive.scala_out differs from Output.3
************************************************************
-rw-r--r-- 1 dunham users 80 Jan 28  2006 Output.3
-rw-r--r-- 1 dunham users 24 Jan 25 14:06 recursive.scala_out


PROGRAM OUTPUT
==============
no such file: recursive
